# wireguard-manager-service

./: .gitignore  Cargo.toml  build.rs  wireguard_manager.yml
scripts/: wg_setup.sh
src/: error.rs  main.rs  server.rs  service.rs  wireguard_config.rs
wg-manager/: Cargo.toml
wg-manager-service/: Cargo.toml  build.rs  setup_vm.sh
wg-manager-service-common/: Cargo.toml  build.rs
wg-manager-service-common/proto/: wireguard_manager.proto
wg-manager-service-common/src/: lib.rs
wg-manager-service/src/: main.rs  server.rs  service.rs  wireguard_config.rs
wg-manager/src/: error.rs  lib.rs
wireguard-manager/: Cargo.toml
wireguard-manager/src/: error.rs  lib.rs
