[package]
name = "wg-service"
version = "0.1.0"
authors = ["boumba100 <noah.bouma@gmail.com>"]
edition = "2018"

[dependencies]
config = "0.11.0"
serde = { version = "1.0.130", features = ["derive"] }
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
wireguard_manager = { path = "./wireguard-manager" }
log = "0.4.14"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.6"