[package]
name = "wg_manager_service_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
tonic = "0.6"
prost = "0.9"

[build-dependencies]
tonic-build = "0.6"