[package]
name = "wg_manager_service_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
tonic = "0.8.3"
prost = "0.11.6"

[build-dependencies]
tonic-build = "0.8.4"